Rework the Gradle plugin to use the official GraalVM plugin (#228)
Use the official GraalVM plugin

This commit reworks the Gradle plugin to use the official GraalVM native image plugin. It accidentally fixes a number of ordering issues which existed in the previous setup.